# horseclaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  SECURITY.md  horseclaw_cli.py  pyproject.toml  requirements.txt  setup.py  validate.py
.github/workflows/: ci.yml
examples/: usage_demo.py
locales/: en.json  zh.json
src/: __init__.py  agent_registry.py  allocation_engine.py  config.py  fee_collector.py  horseclaw.py  token_converter.py  transaction_logger.py
tests/: test_horseclaw.py
